ensured hover effect over remove-from-package cart button covers its entire cell

--- a/styles.css
+++ b/styles.css
@@ -609,6 +609,15 @@ button.sponsorship-dialog-info.v-btn.theme--light {
     color: #2196f3;
 }
 
+button.add-to-package.remove-btn-package.v-btn.theme--light {
+    height: 100%;
+    width: 100%;
+}
+
+.remove-btn-container {
+    padding: 0px;
+}
+
 .sponsorship-dialog-container.v-card.theme--light {
     width: 100%;
     height: 105%;
